<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white_100"
    app:cardCornerRadius="16dp"
    app:contentPaddingBottom="22dp"
    app:contentPaddingLeft="38dp"
    app:contentPaddingRight="38dp"
    app:contentPaddingTop="22dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yd_yoonche_m"
            android:letterSpacing="0.01"
            android:text="@string/give_this_session_a_name_before_saving_it"
            android:textAlignment="center"
            android:textColor="@color/black_50"
            android:textSize="16sp"
            app:autoSizeMaxTextSize="22dp"
            app:autoSizeMinTextSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/outlined_rounded_purple80_bg"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM 1234567890"
            android:gravity="center"
            android:hint="@string/session_name"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:paddingVertical="4dp"
            android:textColor="@color/black_50"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_purple80_bg"
            android:maxHeight="64dp"
            android:minHeight="32dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black_50"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_session" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_purple_bg"
            android:maxHeight="64dp"
            android:minHeight="32dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/et_session" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>